# kubesecret

./: Cargo.toml  LICENSE  README.md
src/: kube.rs  lib.rs  main.rs
